# DevTrack_Mini

./: CMakeLists.txt  CMakeUserPresets.json  README.md  constants.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newprojectdialog.cpp  newprojectdialog.h  newprojectdialog.ui  overviewdetails.h
